k8s/manifests-multi-deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-multi-deploy
  namespace: journee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-multi-deploy
  template:
    metadata:
      labels:
        app: journee-multi-deploy
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-multi-deploy
          image: gcr.io/my-docker-471807/journee:multi-deploy-196a3f
          ports:
            - containerPort: 3000
