k8s/manifests-multi-deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-multi-deploy
  namespace: journee
spec:
  selector:
    app: journee-multi-deploy
  ports:
  - port: 80
    targetPort: 3000
