k8s/manifests-multi-deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journee-ingress-multi-deploy
  namespace: journee
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
  - host: journee-multi-deploy.aooba.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: journee-multi-deploy
            port:
              number: 80
